--- a/Proyecto_diamantes.ipynb
+++ b/Proyecto_diamantes.ipynb
@@ -41,7 +41,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Dataset: [Diamonds](https://www.canva.com/design/DAF1ZcMebR0/fLFC_HP6g2se5gcOvRC-Dw/edit?utm_content=DAF1ZcMebR0&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton)"
+        "Dataset: [Diamonds](https://www.kaggle.com/datasets/shivam2503/diamonds)"
       ],
       "metadata": {
         "id": "x5oWJHWKfWHV"
