--- a/Proyecto_diamantes.ipynb
+++ b/Proyecto_diamantes.ipynb
@@ -5531,6 +5531,17 @@
       "metadata": {
         "id": "Ky__Z1_iRaAi"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "hihhih"
+      ],
+      "metadata": {
+        "id": "VZ-uqSEI3HA8"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
